--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,13 @@
-# LENTERAMU Platform Dependencies
-# Core Flask Framework
-Flask==2.3.3
-Werkzeug==2.3.7
-Jinja2==3.1.2
-MarkupSafe==2.1.3
+# ==== App dependencies (cPanel friendly) ====
+Flask==2.2.5
+Werkzeug==2.2.3
+Jinja2==3.1.4
 itsdangerous==2.1.2
 click==8.1.7
+MarkupSafe==2.1.3
 
-# Database & ORM
-SQLAlchemy==2.0.23
-Flask-SQLAlchemy==3.1.1
-PyMySQL==1.1.0
-cryptography==41.0.7
+SQLAlchemy==2.0.21
+mysql-connector-python==8.0.33
 
-# Session Management
-Flask-Session==0.5.0
-
-# Machine Learning & AI
-scikit-learn==1.3.0
-numpy==1.24.3
-pandas==2.0.3
-joblib==1.3.2
-
-# Data Science & Analytics
-matplotlib==3.7.2
-seaborn==0.12.2
-
-# Utilities
-python-dateutil==2.8.2
-pytz==2023.3
-six==1.16.0
-
-# Development & Testing
-pytest==7.4.3
-pytest-cov==4.1.0
+# (opsional) .env jika Config Anda membaca environment
 python-dotenv==1.0.0
-
-# Security
-bcrypt==4.0.1
-argon2-cffi==23.1.0
-
-# HTTP Requests (if needed for external APIs)
-requests==2.31.0
-urllib3==2.0.7
-
-# JSON Web Tokens (if implementing JWT auth)
-PyJWT==2.8.0
-
-# Email functionality (future feature)
-Flask-Mail==0.9.1
-
-# File uploads (future feature)
-Pillow==10.0.1
-
-# Excel/CSV export (future feature)
-openpyxl==3.1.2
-xlsxwriter==3.1.9
-
-# Logging enhancement
-colorlog==6.7.0
-
-# Environment configuration
-python-decouple==3.8
